--- a/css/index.css
+++ b/css/index.css
@@ -1,42 +1,228 @@
-/* Import Externos */
-@import url("https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap");
-/* Import Internos */
-*,
-*:before,
-*:after {
+@charset "UTF-8";
+* {
   margin: 0;
-  padding: 0;
-  box-sizing: border-box; }
+  padding: 0; }
 
-html {
-  font-family: "Dancing Script", sans-serif;
-  font-size: 62,5%; }
+.uno {
+  background: linear-gradient(0deg, #22c1c3 0%, #fdbb2d 100%); }
 
-h2 {
-  font-size: 4em;
-  color: crimson;
+h1 {
+  font-family: 'Style Script', cursive;
+  text-align: center;
+  font-size: 550%;
+  color: royalblue; }
+
+.nav {
+  display: flex;
+  justify-content: space-between;
+  max-width: 550px;
+  margin: 0 auto; }
+
+.nav-link {
+  color: white;
+  text-decoration: none;
+  font-family: Georgia, 'Times New Roman', Times, serif; }
+
+.nav-menu {
+  display: flex;
+  margin-right: 40px;
+  list-style: none;
+  left: 100%;
+  transition: left 0.3s; }
+
+.nav-menu-item {
+  font-size: 18px;
+  margin: 0 10px;
   text-transform: uppercase; }
 
-header {
-  width: 100%;
-  padding: 4rem 0;
-  background-color: grey; }
-  header nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center; }
-    header nav h1 {
-      font-size: 3em;
-      color: #2b2b2b; }
-    header nav ul {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-around;
-      align-items: center;
-      list-style: none;
-      gap: 3em; }
-      header nav ul li a {
-        font-size: 2m;
-        color: #2b2b2b;
-        text-decoration: none; }
+.nav-menu-link {
+  padding: 1px 12px; }
+
+.nav-menu-link:hover {
+  background-color: #4b617042;
+  transition: 0.5s; }
+
+.menudos {
+  animation: 2s linear infinite;
+  animation-name: aparecer;
+  font-family: 'Dancing Script', cursive;
+  text-align: center;
+  font-size: 400%;
+  margin-top: 22px;
+  color: royalblue; }
+
+@keyframes aparecer {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 18% 200px 500px;
+  grid-auto-rows: 200px;
+  gap: 15px;
+  margin-left: 300px; }
+
+.cervezas {
+  text-align: end;
+  font-size: 160%;
+  color: #03f0cc; }
+
+.tamaño {
+  max-width: 50%;
+  margin-left: 25%; }
+
+.lead {
+  color: red; }
+
+.container {
+  color: red;
+  border-style: solid;
+  border-color: white; }
+
+.box {
+  background-color: rgba(188, 143, 143, 0);
+  width: 1500px;
+  margin: 10px;
+  border-style: outset; }
+
+.quines2 {
+  padding: 20px;
+  border-style: double;
+  color: #03c913;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: x-large;
+  text-align: center; }
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 150px 150px 150px;
+  gap: 1em; }
+
+.adc1,
+.adc2 {
+  color: gold;
+  text-align: end;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-transform: uppercase;
+  grid-template-columns: 33% 33% 33%;
+  margin: 1em 5em 3em 1em; }
+
+.adc1:hover {
+  border: 2px solid yellow; }
+
+.adc2:hover {
+  border: 2px solid yellow; }
+
+.titulo {
+  margin-top: 50px;
+  grid-column: 1/4;
+  border: 2px solid yellow;
+  text-align: center;
+  font-family: 'Dancing Script', cursive;
+  font-size: 300%;
+  color: royalblue;
+  animation: bounce1 4s alternate infinite ease-in; }
+
+@keyframes bounce1 {
+  0% {
+    transform: translateX(-20%); }
+  100% {
+    transform: translateX(0%); } }
+
+.cv {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: large;
+  text-align: start;
+  margin: 20px;
+  margin-top: 200px;
+  color: yellow; }
+
+.footer {
+  padding-top: 90px;
+  display: flex;
+  justify-content: flex-end;
+  color: #0010f7; }
+
+@media (max-width: 800px) {
+  .uno {
+    background: #03f0cc; }
+  .nav-menu {
+    flex-direction: column;
+    align-items: center;
+    margin-right: 2px;
+    left: 0;
+    top: 60px;
+    width: 100%; }
+  .nav-link {
+    color: red;
+    font-family: monospace; } }
+
+@media (max-width: 768px) {
+  .titulo {
+    margin-top: 50px;
+    grid-column: 1/3;
+    border: 2px groove red;
+    text-align: center;
+    font-family: 'Dancing Script', cursive;
+    font-size: 300%;
+    color: white;
+    animation: bounce1 4s alternate infinite ease-in; }
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 150px 150px;
+    gap: 1em; }
+  .adc1 {
+    color: red;
+    text-align: left;
+    font-family: monospace;
+    font-size: x-large;
+    margin: 1em 5em 3em 1em; }
+  .adc2 {
+    color: blue;
+    text-align: right;
+    font-family: monospace;
+    font-size: x-large;
+    margin: 1em 5em 3em 1em; } }
+
+@media (max-width: 576px) {
+  .titulo {
+    margin-top: 50px;
+    grid-column: 1/1;
+    border: 3px dotted white;
+    text-align: center;
+    font-family: 'Dancing Script', cursive;
+    font-size: 280%;
+    color: yellow;
+    animation: bounce1 4s alternate infinite ease-in; }
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 150px;
+    gap: 1em; }
+  .adc1 {
+    color: greenyellow;
+    text-align: center;
+    font-family: monospace;
+    font-size: x-large;
+    margin: 1em 5em 3em 1em; }
+  .adc2 {
+    color: #fa08e6;
+    text-align: center;
+    font-family: monospace;
+    font-size: x-large;
+    margin: 1em 5em 3em 1em; } }
+
+@media (max-width: 570px) {
+  .menudos {
+    color: red;
+    border: 5px double yellowgreen;
+    font-size: xx-large; }
+  .cervezas {
+    font-family: monospace;
+    color: indigo;
+    text-align: start;
+    font-size: x-large; } }
