--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,6 +1,3 @@
-/* Import Externos */
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+@import "./globals.scss"
 
-/* Import Internos */
-@import "./globals.scss";
-@import "./partials/header";
+
