--- a/_globals.scss
+++ b/_globals.scss
@@ -1,17 +1,34 @@
+/*Colores*/
+$primary: linear-gradient(135deg, #d4e4ef 0%,#86aecc 100%);
+$segundo: #292b22;
+$tercero: linear-gradient(135deg, #cfe7fa 0%,#6393c1 100%);
+$cuarto:#e7e7a9;
+$quinto: red;
+$fondo: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
+$piso: #fff;
+$letra1: black;
+$letra2: blue;
+
 * {
   margin: 0;
   padding: 0;
 }
 
-.uno {
-  background: linear-gradient(0deg, #22c1c3 0%, #fdbb2d 100%); 
+.cabeza {
+  background: $primary;
+  padding: 2%;
+}
+
+.cuerpo {
+  background: $tercero;
+  padding: 6%;
 }
 
 h1 {
   font-family: 'Style Script', cursive;
   text-align:center;
   font-size: 550%;
-  color: royalblue;
+  color: $letra1;
 }
 
 .nav {
@@ -37,7 +54,7 @@ h1 {
       
 .nav-menu-item {
   font-size: 18px;
-  margin: 0 10px;
+  margin: 0;
   text-transform: uppercase;          
 }
       
@@ -57,7 +74,7 @@ h1 {
   text-align:center;
   font-size: 400%;
   margin-top: 22px;
-  color: royalblue;
+  color: $letra2;
 }
 
 @keyframes aparecer {
@@ -69,40 +86,26 @@ h1 {
   }
 }
 
-.grid-container {
-  display: grid;
-  grid-template-columns: 18% 200px 500px;
-  grid-auto-rows: 200px;
-  gap: 15px;
-  margin-left: 300px;
-}
+/*Pagina Productos*/
 
 .cervezas {
-  text-align: end ;   
+  text-align:center;   
   font-size: 160%;
   color: rgb(3, 240, 204);
 }
-.tamaño {
-  max-width: 50%;
-  margin-left: 25%;
-}
+
 
 .lead {
-  color: red;
+  color: $quinto;
 }
 
 .container {
-  color: red;
+  color: $quinto;
   border-style: solid;
   border-color: white;
 }
 
-.box {
-  background-color: rgba(188, 143, 143, 0);
-  width: 1500px;
-  margin: 10px;
-  border-style:outset;
-}
+/*Pagina Quienes*/
 
 .quines2 {
   padding: 20px;
@@ -112,6 +115,8 @@ h1 {
   font-size: x-large;
   text-align: center;
 }
+
+/* Pagina Comentarios*/
 
 .grid {
   display: grid;
@@ -143,7 +148,7 @@ h1 {
   text-align: center;
   font-family: 'Dancing Script', cursive;
   font-size: 300%;
-  color: royalblue;
+  color: $primary;
   animation: bounce1 4s alternate infinite ease-in;
 }
 
@@ -156,6 +161,7 @@ h1 {
   }
 }
 
+/* Pagina Cv */
 .cv {
   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: large;
@@ -165,12 +171,14 @@ h1 {
   color: yellow;
 }
 
+/*Footer*/
 
 .footer {
-  padding-top: 90px;
+  padding-top: 20px;
   display: flex;
   justify-content:flex-end;
-  color:rgb(0, 16, 247)
+  color:$quinto;
+  background-color: $cuarto;
 }
 
 @media (max-width: 800px) {
@@ -187,7 +195,7 @@ h1 {
 }
 
 .nav-link {
-  color: red;
+  color: $quinto;
   font-family: monospace;
   }
   
@@ -197,7 +205,7 @@ h1 {
   .titulo {
     margin-top: 50px;
     grid-column: 1/3;
-    border: 2px groove red;
+    border: 2px groove $quinto;
     text-align: center;
     font-family: 'Dancing Script', cursive;
     font-size: 300%;
@@ -211,14 +219,14 @@ h1 {
     gap: 1em;  
   }
   .adc1 {
-  color:red;
+  color:$quinto;
   text-align: left;
   font-family:monospace;
   font-size: x-large;
   margin: 1em 5em 3em 1em;
   }
   .adc2 {
-    color:blue;
+    color:$primary;
     text-align: right;
     font-family:monospace;
     font-size: x-large;
@@ -261,7 +269,7 @@ h1 {
 
 @media (max-width: 570px) {
   .menudos {
-    color: red;
+    color: $quinto;
     border: 5px double yellowgreen;
     font-size: xx-large;
   }
