--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,21 @@
-@charset "UTF-8";
+/*Colores*/
 * {
   margin: 0;
   padding: 0; }
 
-.uno {
-  background: linear-gradient(0deg, #22c1c3 0%, #fdbb2d 100%); }
+.cabeza {
+  background: linear-gradient(135deg, #d4e4ef 0%, #86aecc 100%);
+  padding: 2%; }
+
+.cuerpo {
+  background: linear-gradient(135deg, #cfe7fa 0%, #6393c1 100%);
+  padding: 6%; }
 
 h1 {
   font-family: 'Style Script', cursive;
   text-align: center;
   font-size: 550%;
-  color: royalblue; }
+  color: black; }
 
 .nav {
   display: flex;
@@ -32,7 +37,7 @@ h1 {
 
 .nav-menu-item {
   font-size: 18px;
-  margin: 0 10px;
+  margin: 0;
   text-transform: uppercase; }
 
 .nav-menu-link {
@@ -49,7 +54,7 @@ h1 {
   text-align: center;
   font-size: 400%;
   margin-top: 22px;
-  color: royalblue; }
+  color: blue; }
 
 @keyframes aparecer {
   0% {
@@ -57,21 +62,11 @@ h1 {
   100% {
     opacity: 1; } }
 
-.grid-container {
-  display: grid;
-  grid-template-columns: 18% 200px 500px;
-  grid-auto-rows: 200px;
-  gap: 15px;
-  margin-left: 300px; }
-
+/*Pagina Productos*/
 .cervezas {
-  text-align: end;
+  text-align: center;
   font-size: 160%;
   color: #03f0cc; }
-
-.tamaño {
-  max-width: 50%;
-  margin-left: 25%; }
 
 .lead {
   color: red; }
@@ -81,12 +76,7 @@ h1 {
   border-style: solid;
   border-color: white; }
 
-.box {
-  background-color: rgba(188, 143, 143, 0);
-  width: 1500px;
-  margin: 10px;
-  border-style: outset; }
-
+/*Pagina Quienes*/
 .quines2 {
   padding: 20px;
   border-style: double;
@@ -95,6 +85,7 @@ h1 {
   font-size: x-large;
   text-align: center; }
 
+/* Pagina Comentarios*/
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -123,7 +114,7 @@ h1 {
   text-align: center;
   font-family: 'Dancing Script', cursive;
   font-size: 300%;
-  color: royalblue;
+  color: linear-gradient(135deg, #d4e4ef 0%, #86aecc 100%);
   animation: bounce1 4s alternate infinite ease-in; }
 
 @keyframes bounce1 {
@@ -132,6 +123,7 @@ h1 {
   100% {
     transform: translateX(0%); } }
 
+/* Pagina Cv */
 .cv {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: large;
@@ -140,11 +132,13 @@ h1 {
   margin-top: 200px;
   color: yellow; }
 
+/*Footer*/
 .footer {
-  padding-top: 90px;
+  padding-top: 20px;
   display: flex;
   justify-content: flex-end;
-  color: #0010f7; }
+  color: red;
+  background-color: #e7e7a9; }
 
 @media (max-width: 800px) {
   .uno {
@@ -182,7 +176,7 @@ h1 {
     font-size: x-large;
     margin: 1em 5em 3em 1em; }
   .adc2 {
-    color: blue;
+    color: linear-gradient(135deg, #d4e4ef 0%, #86aecc 100%);
     text-align: right;
     font-family: monospace;
     font-size: x-large;
