--- a/_globals.scss
+++ b/_globals.scss
@@ -8,73 +8,117 @@ $fondo: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%);
 $piso: #fff;
 $letra1: black;
 $letra2: blue;
+$letra3: rgb(8, 235, 8); 
 
 * {
   margin: 0;
   padding: 0;
 }
 
-.cabeza {
-  background: $primary;
-  padding: 2%;
+/* Caratula */
+
+.inicio {
+  background: url("../imagenes/dos.jpg");
+  background-size: 20%;
+} 
+
+.primero {
+  position: absolute;
+  top: 30%; 
+  right: 50%;
+  transform: translate(50%,-50%);
+  text-transform: uppercase;
+  font-family: verdana;
+  font-size: 5em;
+  font-weight: 400;
+  color: black;
+  text-shadow: 1px 1px 1px #919191,
+      1px 2px 1px #919191,
+      1px 3px 1px #919191,
+      1px 4px 1px #919191,
+      1px 5px 1px #919191,
+      1px 6px 1px #919191,
+      1px 7px 1px #919191,
+      1px 8px 1px #919191,
+      1px 9px 1px #919191,
+      1px 10px 1px #919191,
+  1px 18px 6px rgba(16,16,16,0.4),
+  1px 22px 10px rgba(16,16,16,0.2),
+  1px 25px 35px rgba(16,16,16,0.2),
+  1px 30px 60px rgba(16,16,16,0.4);
 }
 
-.cuerpo {
-  background: $tercero;
-  padding: 6%;
+.cerv {
+  width: 2px;
+  height: 2px;
+  background: black;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  color: black;
+  font-size: 30px;
+  transition: .3s ease all;
+  margin-top: 35%;
+  margin-left: 50%;
 }
 
-h1 {
-  font-family: 'Style Script', cursive;
-  text-align:center;
-  font-size: 550%;
-  color: $letra1;
+/* Pagina Quienes */ 
+
+.fondo {
+  background: url("../imagenes/fondo9.png");
 }
 
-.nav {
+.grid-item {
   display: flex;
-  justify-content: space-between;
-  max-width:550px;
-  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  transition: transform 0.3s ease-in-out;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
-      
-.nav-link {
-  color: white;
-  text-decoration: none;
-  font-family:Georgia, 'Times New Roman', Times, serif;
+
+.grid-item:hover {
+  filter: opacity(0.9);
+  transform: scale(1.04);
 }
-       
-.nav-menu {
-  display: flex;
-  margin-right: 40px;
-  list-style: none;
-  left: 100%;
-  transition: left 0.3s;
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-auto-rows: minmax(200px, auto);
+  gap: 20px;
+  padding: 20px;
+  grid-auto-flow: dense;
 }
-      
-.nav-menu-item {
-  font-size: 18px;
-  margin: 0;
-  text-transform: uppercase;          
-}
-      
-.nav-menu-link {
-  padding: 1px 12px;
-}
-      
-.nav-menu-link:hover {
-  background-color: #4b617042;
-  transition: 0.5s;
-}
-      
+
 .menudos {
   animation: 2s linear infinite;
   animation-name: aparecer;
-  font-family: 'Dancing Script', cursive;
+  font-family: 'Kaushan Script', cursive;
   text-align:center;
   font-size: 400%;
   margin-top: 22px;
   color: $letra2;
+}
+
+.quines2 {
+  padding: 20px;
+  color: $letra1;
+  font-family: 'Kaushan Script', cursive;
+  font-size: x-large;
+  text-align: center;
+}
+
+.rima {
+  display: block;
+  padding: 25px 30px;
+  border-top: 1px solid #666;
+  border-bottom: 1px solid #666;
+  font-family: 'Kaushan Script', cursive;
+  text-align: center;
+  font-size: 20px;
 }
 
 @keyframes aparecer {
@@ -90,13 +134,9 @@ h1 {
 
 .cervezas {
   text-align:center;   
-  font-size: 160%;
-  color: rgb(3, 240, 204);
-}
-
-
-.lead {
-  color: $quinto;
+  font-size: x-large;
+  color: $letra1;
+  font-family: 'Kaushan Script', cursive;
 }
 
 .container {
@@ -105,178 +145,71 @@ h1 {
   border-color: white;
 }
 
-/*Pagina Quienes*/
-
-.quines2 {
-  padding: 20px;
-  border-style: double;
-  color: rgb(3, 201, 19);
-  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: x-large;
-  text-align: center;
-}
-
-/* Pagina Comentarios*/
-
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 150px 150px 150px;
-  gap: 1em;
-}
-
-.adc1,
-.adc2 {
-  color: gold;
-  text-align: end;
-  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  text-transform:uppercase;
-  grid-template-columns: 33% 33% 33%;
-  margin: 1em 5em 3em 1em;
-}
-.adc1:hover {
-  border: 2px solid yellow;
-}
-.adc2:hover {
-  border: 2px solid yellow;
-}
-
-.titulo {
-  margin-top: 50px;
-  grid-column: 1/4;
-  border: 2px solid yellow;
-  text-align: center;
-  font-family: 'Dancing Script', cursive;
-  font-size: 300%;
-  color: $primary;
-  animation: bounce1 4s alternate infinite ease-in;
-}
-
-@keyframes bounce1 {
-  0% {
-    transform: translateX(-20%);
-  }
-  100% {
-    transform: translateX(0%);
-  }
+h2 {
+  font-family: 'Kaushan Script', cursive;
+  text-align:center;
+  font-size: 250%;
+  color: $letra2; 
 }
 
 /* Pagina Cv */
 .cv {
-  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Kaushan Script', cursive;
   font-size: large;
   text-align:start;
-  margin: 20px;
-  margin-top: 200px;
-  color: yellow;
+  margin-top: 100px;
+  color: $letra1;
 }
 
 /*Footer*/
 
-.footer {
-  padding-top: 20px;
-  display: flex;
-  justify-content:flex-end;
-  color:$quinto;
-  background-color: $cuarto;
+.contenedor {
+  font-size: 22px;
+  color: black;
+  text-align: center;
 }
+
+.redes-sociales {
+  display: flex;
+  justify-content: center;
+}
+
+.redes-sociales i {
+  font-size: 30px;
+  padding: 0 20px;
+}
+
+.icono {
+  border: none;
+  cursor: pointer;
+  transition: .3s ease all;
+  background-color: rgba(0, 0, 0, 0) ;
+}
+
+/* Responsive */
 
 @media (max-width: 800px) {
-  .uno {
-  background: rgb(3, 240, 204);
-  }
-  .nav-menu {
-  flex-direction: column;
-  align-items: center;
-  margin-right: 2px;
-  left: 0;
-  top: 60px;
-  width: 100%;
-}
-
-.nav-link {
-  color: $quinto;
-  font-family: monospace;
-  }
-  
-}
-
-@media (max-width: 768px) {
-  .titulo {
-    margin-top: 50px;
-    grid-column: 1/3;
-    border: 2px groove $quinto;
-    text-align: center;
-    font-family: 'Dancing Script', cursive;
-    font-size: 300%;
-    color: white;
-    animation: bounce1 4s alternate infinite ease-in;
-  }
-  .grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 150px 150px;
-    gap: 1em;  
-  }
-  .adc1 {
-  color:$quinto;
-  text-align: left;
-  font-family:monospace;
-  font-size: x-large;
-  margin: 1em 5em 3em 1em;
-  }
-  .adc2 {
-    color:$primary;
-    text-align: right;
-    font-family:monospace;
-    font-size: x-large;
-    margin: 1em 5em 3em 1em;
-    }
-}
-
-@media (max-width: 576px) {
-  .titulo {
-    margin-top: 50px;
-    grid-column: 1/1;
-    border: 3px dotted white;
-    text-align: center;
-    font-family: 'Dancing Script', cursive;
-    font-size: 280%;
-    color: yellow;
-    animation: bounce1 4s alternate infinite ease-in;
-  }
-  .grid {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 150px;
-    gap: 1em;  
-  }
-  .adc1 {
-  color:greenyellow;
-  text-align: center;
-  font-family:monospace;
-  font-size: x-large;
-  margin: 1em 5em 3em 1em;
-  }
-  .adc2 {
-    color:rgb(250, 8, 230);
-    text-align: center;
-    font-family:monospace;
-    font-size: x-large;
-    margin: 1em 5em 3em 1em;
-    }
-}
-
-@media (max-width: 570px) {
   .menudos {
-    color: $quinto;
-    border: 5px double yellowgreen;
-    font-size: xx-large;
+  color: $quinto;
   }
-  .cervezas {
-    font-family: monospace;
-    color: indigo;
-    text-align: start;
-    font-size: x-large;
+  .rima, .cervezas {
+    color: $letra2;
+  }
+  .h2 {
+    color: $cuarto;
+  }
+  .fondo {
+    background: url("../imagenes/fondo10.png");
+}
+  .quines2 {
+    color:$segundo;
+    text-align: justify;
+  }
+  .contenedor {
+    color: $letra3;
+  }
+  .cv {
+    color: $letra2;
+    text-align: center;
   }
 }
