--- a/_globals.scss
+++ b/_globals.scss
@@ -99,7 +99,6 @@ $letra3: rgb(8, 235, 8);
   font-family: 'Kaushan Script', cursive;
   text-align:center;
   font-size: 400%;
-  margin-top: 22px;
   color: $letra2;
 }
 
@@ -132,8 +131,20 @@ $letra3: rgb(8, 235, 8);
 
 /*Pagina Productos*/
 
-.cervezas {
-  text-align:center;   
+.cervezas1 {
+  width: 100%;
+  max-width: 1000px;
+  margin: auto;
+  padding: 60px;
+}
+
+.cervezas1 img {
+width: 90px;
+float: left;
+margin-right: 20px;
+}
+
+.cervezas1 p {
   font-size: x-large;
   color: $letra1;
   font-family: 'Kaushan Script', cursive;
@@ -150,6 +161,11 @@ h2 {
   text-align:center;
   font-size: 250%;
   color: $letra2; 
+}
+
+.barra {
+  display: flex;
+  justify-content: center;
 }
 
 /* Pagina Cv */
@@ -192,7 +208,7 @@ h2 {
   .menudos {
   color: $quinto;
   }
-  .rima, .cervezas {
+  .rima, .cervezas1 {
     color: $letra2;
   }
   .h2 {
