--- a/css/index.css
+++ b/css/index.css
@@ -65,7 +65,6 @@
   font-family: 'Kaushan Script', cursive;
   text-align: center;
   font-size: 400%;
-  margin-top: 22px;
   color: blue; }
 
 .quines2 {
@@ -91,8 +90,18 @@
     opacity: 1; } }
 
 /*Pagina Productos*/
-.cervezas {
-  text-align: center;
+.cervezas1 {
+  width: 100%;
+  max-width: 1000px;
+  margin: auto;
+  padding: 60px; }
+
+.cervezas1 img {
+  width: 90px;
+  float: left;
+  margin-right: 20px; }
+
+.cervezas1 p {
   font-size: x-large;
   color: black;
   font-family: 'Kaushan Script', cursive; }
@@ -107,6 +116,10 @@ h2 {
   text-align: center;
   font-size: 250%;
   color: blue; }
+
+.barra {
+  display: flex;
+  justify-content: center; }
 
 /* Pagina Cv */
 .cv {
@@ -140,7 +153,7 @@ h2 {
 @media (max-width: 800px) {
   .menudos {
     color: red; }
-  .rima, .cervezas {
+  .rima, .cervezas1 {
     color: blue; }
   .h2 {
     color: #e7e7a9; }
