--- a/_globals.scss
+++ b/_globals.scss
@@ -132,10 +132,12 @@ $letra3: rgb(8, 235, 8);
 /*Pagina Productos*/
 
 .cervezas1 {
+  display: flex;
   width: 100%;
   max-width: 1000px;
   margin: auto;
   padding: 60px;
+  flex-direction: row;
 }
 
 .cervezas1 img {
